--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p>The library takes care themselves to check whether a permit has already been agreed by the user or not.
 if the user has given consent call the system dialog for the acceptance</p>
 
-<p><img src="https://raw.githubusercontent.com/RurioLuca/MarshmallowPermissionManager/master/img/permission.png" alt="Screen"></p>
+<p><img src="https://raw.githubusercontent.com/RurioLuca/MarshmallowPermissionManager/master/img/permission.jpg" alt="Screen"></p>
 
 <h3>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h3>
@@ -71,7 +71,7 @@ if the user has given consent call the system dialog for the acceptance</p>
 </pre></div>
 
 <div class="highlight highlight-source-groovy-gradle"><pre><span class="pl-en">dependencies</span> {
- compile <span class="pl-s"><span class="pl-pds">'</span>com.auron:permission-manage:1.1.0<span class="pl-pds">'</span></span>
+ compile <span class="pl-s"><span class="pl-pds">'</span>com.auron:permission-manage:1.1.2<span class="pl-pds">'</span></span>
 }</pre></div>
 
 <h3>
@@ -101,6 +101,15 @@ if the user has given consent call the system dialog for the acceptance</p>
                         <span class="pl-c">//permission denied</span>
                         <span class="pl-c">//replace with your action</span>
                     }
+                       <span class="pl-k">@Override</span>
+                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDienid</span>() {
+                     <span class="pl-c">// user has check never ask again</span>
+                     <span class="pl-c">// you need to open setting manually</span>
+                     <span class="pl-c">//  Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS);</span>
+                     <span class="pl-c">//  Uri uri = Uri.fromParts("package", getPackageName(), null);</span>
+                     <span class="pl-c">//   intent.setData(uri);</span>
+                     <span class="pl-c">//  startActivityForResult(intent, REQUEST_PERMISSION_SETTING); </span>
+                    }
                 });</pre></div>
 
 <h4>
@@ -127,6 +136,15 @@ if the user has given consent call the system dialog for the acceptance</p>
                         <span class="pl-c">//permission denied</span>
                         <span class="pl-c">//replace with your action</span>
                     }
+                     <span class="pl-k">@Override</span>
+                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDienid</span>() {
+                     <span class="pl-c">// user has check never ask again</span>
+                     <span class="pl-c">// you need to open setting manually</span>
+                     <span class="pl-c">//  Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS);</span>
+                     <span class="pl-c">//  Uri uri = Uri.fromParts("package", getPackageName(), null);</span>
+                     <span class="pl-c">//   intent.setData(uri);</span>
+                     <span class="pl-c">//  startActivityForResult(intent, REQUEST_PERMISSION_SETTING); </span>
+                    }
                 });</pre></div>
 
 <h1>
@@ -136,6 +154,11 @@ if the user has given consent call the system dialog for the acceptance</p>
 <a id="check-whether-a-permit-has-been-agreed" class="anchor" href="#check-whether-a-permit-has-been-agreed" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>check whether a permit has been agreed</h4>
 
 <div class="highlight highlight-source-java"><pre><span class="pl-k">boolean</span> isGranted <span class="pl-k">=</span> isPermissionGranted(<span class="pl-smi">MainActivity</span><span class="pl-k">.</span><span class="pl-v">this</span>,<span class="pl-smi">PermissionUtils</span><span class="pl-k">.</span><span class="pl-smi">Manifest_WRITE_EXTERNAL_STORAGE</span>);</pre></div>
+
+<h4>
+<a id="check-whether-multiple-permission-has-been-agreed" class="anchor" href="#check-whether-multiple-permission-has-been-agreed" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>check whether multiple permission has been agreed</h4>
+
+<div class="highlight highlight-source-java"><pre><span class="pl-k">boolean</span> isGranted <span class="pl-k">=</span> isPermissionsGranted(<span class="pl-smi">MainActivity</span><span class="pl-k">.</span><span class="pl-v">this</span>,<span class="pl-k">new</span> <span class="pl-smi">String</span>[]{<span class="pl-smi">PermissionUtils</span><span class="pl-k">.</span><span class="pl-smi">Manifest_WRITE_EXTERNAL_STORAGE</span>,<span class="pl-smi">PermissionUtils</span><span class="pl-k">.</span><span class="pl-smi">Manifest_CAMERA</span>});</pre></div>
 
 <h4>
 <a id="permissionutils" class="anchor" href="#permissionutils" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>PermissionUtils</h4>
@@ -157,6 +180,15 @@ if the user has given consent call the system dialog for the acceptance</p>
                 <span class="pl-c">//permission denied</span>
                 <span class="pl-c">//replace with your action</span>
             }
+             <span class="pl-k">@Override</span>
+                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDienid</span>() {
+                     <span class="pl-c">// user has check 'never ask again'</span>
+                     <span class="pl-c">// you need to open setting manually</span>
+                     <span class="pl-c">//  Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS);</span>
+                     <span class="pl-c">//  Uri uri = Uri.fromParts("package", getPackageName(), null);</span>
+                     <span class="pl-c">//   intent.setData(uri);</span>
+                     <span class="pl-c">//  startActivityForResult(intent, REQUEST_PERMISSION_SETTING); </span>
+                    }
         });</pre></div>
 
 <p>it is not necessary to use an answer key</p>
@@ -167,6 +199,21 @@ if the user has given consent call the system dialog for the acceptance</p>
 <p>Rurio Luca- <a href="mailto:rurio.luca@gmail.com">rurio.luca@gmail.com</a></p>
 
 <p><a href="https://it.linkedin.com/in/luca-rurio-5a4462107"><img src="https://raw.githubusercontent.com/RurioLuca/MarshmallowPermissionManager/master/img/social/linkedin-icon.png" alt="Linkedin"> </a></p>
+
+<h3>
+<a id="app-using-marshmallowpermissionmanager" class="anchor" href="#app-using-marshmallowpermissionmanager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>App using MarshmallowPermissionManager</h3>
+
+<h1></h1>
+
+<ul>
+<li><a href="https://play.google.com/store/apps/details?id=qrreader.com.studios.it.qrreader">Material Qr</a></li>
+<li><a href="https://play.google.com/store/apps/details?id=volo.tsc.it.volo">Volo</a></li>
+<li><a href="https://play.google.com/store/apps/details?id=volontario.volo.tsc.it.volontario">Volo Oss</a></li>
+<li><a href="https://play.google.com/store/apps/details?id=gespat.tsc.it.gespat">Gespat</a></li>
+</ul>
+
+<p>send me your apps!
+<a href="mailto:rurio.luca@gmail.com">rurio.luca@gmail.com</a></p>
 
 <h1>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h1>
