--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/RurioLuca/MarshmallowPermissionManager" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/RurioLuca/PermissionManager" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
-            <li><a href="https://github.com/RurioLuca/MarshmallowPermissionManager/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/RurioLuca/MarshmallowPermissionManager/tarball/master" class="button">TAR</a></li>
+            <li><a href="https://github.com/RurioLuca/PermissionManager/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/RurioLuca/PermissionManager/tarball/master" class="button">TAR</a></li>
           </ul>
         </div>
       </div><!-- end banner -->
@@ -40,15 +40,18 @@
       </nav>
       <section>
         <h1>
-<a id="marshmallowpermissionmanager" class="anchor" href="#marshmallowpermissionmanager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>MarshmallowPermissionManager</h1>
+<a id="permissionhelper" class="anchor" href="#permissionhelper" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>PermissionHelper</h1>
 
 <p><a href="http://www.android.com"><img src="https://img.shields.io/badge/platform-Android-blue.svg?style=flat-square" alt="Platform (Android)"></a>
 <a href="https://android-arsenal.com/details/1/3234"><img src="https://img.shields.io/badge/Android%20Arsenal-MarshmallowPermissionManager-green.svg?style=true" alt=" Android Arsenal"></a>
 <a href="https://github.com/RurioLuca/MarshmallowPermissionManager/blob/master/License"><img src="https://img.shields.io/github/license/mashape/apistatus.svg" alt="GitHub license"></a>
-<a href="https://www.codewake.com/p/marshmallowpermissionmanager"><img src="https://www.codewake.com/badges/ask_question_flat_square.svg" alt="Codewake"></a></p>
+<a href="https://www.codewake.com/p/marshmallowpermissionmanager"><img src="https://www.codewake.com/badges/ask_question_flat_square.svg" alt="Codewake"></a>
+<a href="https://bintray.com/auron/maven/permission-manage/_latestVersion"> <img src="https://api.bintray.com/packages/auron/maven/permission-manage/images/download.svg" alt="Download"> </a> 
+<a href="https://android-arsenal.com/api?level=9"><img src="https://img.shields.io/badge/API-9%2B-brightgreen.svg?style=flat" alt="API"></a>
+ <a href="https://github.com/RurioLuca/MarshmallowPermissionManager/stargazers"><img src="https://img.shields.io/github/stars/RurioLuca/MarshmallowPermissionManager.svg" alt="GitHub stars"></a></p>
 
 <h4>
-<a id="helper-to-ask-runtime-permission-on-android-marshmallow" class="anchor" href="#helper-to-ask-runtime-permission-on-android-marshmallow" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Helper to ask runtime permission on android marshmallow</h4>
+<a id="helper-to-ask-runtime-permission-on-android-marshmallow-and-nougat" class="anchor" href="#helper-to-ask-runtime-permission-on-android-marshmallow-and-nougat" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Helper to ask runtime permission on android marshmallow and nougat</h4>
 
 <p>The library takes care themselves to check whether a permit has already been agreed by the user or not.
 if the user has given consent call the system dialog for the acceptance</p>
@@ -58,7 +61,7 @@ if the user has given consent call the system dialog for the acceptance</p>
 <h3>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h3>
 
-<p>The library requires Android <strong>API Level 7+</strong>.</p>
+<p>The library requires Android <strong>API Level 9+</strong>.</p>
 
 <h3>
 <a id="import" class="anchor" href="#import" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Import</h3>
@@ -73,7 +76,7 @@ if the user has given consent call the system dialog for the acceptance</p>
 </pre></div>
 
 <div class="highlight highlight-source-groovy-gradle"><pre><span class="pl-en">dependencies</span> {
- compile <span class="pl-s"><span class="pl-pds">'</span>com.auron:permission-manage:1.1.4<span class="pl-pds">'</span></span>
+ compile <span class="pl-s"><span class="pl-pds">'</span>com.auron:permission-manage:1.1.5<span class="pl-pds">'</span></span>
 }</pre></div>
 
 <h3>
@@ -104,7 +107,7 @@ if the user has given consent call the system dialog for the acceptance</p>
                         <span class="pl-c">//replace with your action</span>
                     }
                        <span class="pl-k">@Override</span>
-                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDienid</span>() {
+                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDenied</span>() {
                      <span class="pl-c">// user has check never ask again</span>
                      <span class="pl-c">// you need to open setting manually</span>
                      <span class="pl-c">//  Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS);</span>
@@ -139,7 +142,7 @@ if the user has given consent call the system dialog for the acceptance</p>
                         <span class="pl-c">//replace with your action</span>
                     }
                      <span class="pl-k">@Override</span>
-                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDienid</span>() {
+                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDenied</span>() {
                      <span class="pl-c">// user has check never ask again</span>
                      <span class="pl-c">// you need to open setting manually</span>
                      <span class="pl-c">//  Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS);</span>
@@ -183,7 +186,7 @@ if the user has given consent call the system dialog for the acceptance</p>
                 <span class="pl-c">//replace with your action</span>
             }
              <span class="pl-k">@Override</span>
-                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDienid</span>() {
+                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDenied</span>() {
                      <span class="pl-c">// user has check 'never ask again'</span>
                      <span class="pl-c">// you need to open setting manually</span>
                      <span class="pl-c">//  Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS);</span>
@@ -209,7 +212,7 @@ if the user has given consent call the system dialog for the acceptance</p>
                 <span class="pl-c">//replace with your action</span>
             }
              <span class="pl-k">@Override</span>
-                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDienid</span>() {
+                    <span class="pl-k">public</span> <span class="pl-k">void</span> <span class="pl-en">permissionForeverDenied</span>() {
                      <span class="pl-c">// user has check 'never ask again'</span>
                      <span class="pl-c">// you need to open setting manually</span>
                      <span class="pl-c">//  Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS);</span>
